# vs-windows-llvm

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE.txt  README.md
include/vs-windows-llvm/: plugin-registration.h  string-analysis.h  string-reverser.h  util.h
lib/: CMakeLists.txt  plugin-registration.cpp  string-analysis.cpp  string-reverser.cpp  util.cpp  vs-windows-llvm.def
test/: CMakeLists.txt  hello.c
